--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,8 +9,8 @@
 </style>
 
 <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
-{# image du logo dealabs #}
-    <img src="./dealabs-logo.svg" alt="">
+    {# image du logo dealabs #}
+    {# <img src="./dealabs-logo.svg" alt=""> #}
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -39,53 +39,20 @@
                 <a class="nav-link disabled" href="#">Disabled</a>
             </li>
         </ul>
+        <li class="nav-item">
+            <a href="{{ path('app_login') }}" class="btn btn-primary">Login</a>
+        </li>
+        {% if app.user %}
+            <li class="nav-item">
+                <a href="{{ path('app_logout') }}" class="btn btn-danger">Logout</a>
+            </li>
+        {% endif %}
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
 </nav>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
