--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="example-wrapper">
-        <h1>Dealstorm</h1>
-    </div>
+    <h1>Liste des deals</h1>
+
+    <ul>
+        {% for deal in deals %}
+            <li>
+                <h2>{{ deal.Title }}</h2>
+                <p>{{ deal.Description }}</p>
+                <p>Prix : {{ deal.Price }}</p>
+                <p>Date d'expiration : {{ deal.ExpirationDate|date('d/m/Y') }}</p>
+            </li>
+        {% endfor %}
+    </ul>
 {% endblock %}
