--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,5 +1,5 @@
 @import "abstracts/variables";
-@import "abstracts/utilities";
+@import "abstracts/globals";
 @import "base/reset";
 @import "base/typography";
 @import "components/buttons";
