--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,8 +4,9 @@
         <meta charset="UTF-8">
         <title>{% block title %}DealStorm - Feel the Thunder of Deals!{% endblock %}</title>
         <link rel="icon" href="{{ asset('build/images/favicon.ico') }}">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
+        {# TODO enlever le cdn #}
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512" crossorigin="anonymous">
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
