--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,32 +1,44 @@
-<nav class="navbar sticky-top justify-content-between bg-darkgrey">
-    <div class="navbar-menu d-flex flex-row">
-        <a class="navbar-brand m-0" href="{{ path('app_home') }}"><img class="logo" src="{{ asset('build/images/logo-header.png') }}" alt="Logo"></a>
-        <div class="navbar-links">
-            <ul class="navbar-nav flex-row mr-auto fw-bold">
-                <li class="nav-item ms-3 me-2">
-                    <a class="nav-link" href="{{ path('app_home') }}">Good deals</a>
-                </li>
-                <li class="nav-item ms-2 me-3">
-                    <a class="nav-link" href="{{ path('app_home') }}">Coupon codes</a>
-                </li>
-            </ul>
+<nav class="navbar sticky-top justify-content-center bg-darkgrey">
+    <div class="wrapper-center d-flex justify-content-between">
+        <div class="navbar-menu d-flex flex-row align-items-center">
+            <a class="navbar-brand m-0" href="{{ path('app_home') }}"><img class="logo" src="{{ asset('build/images/logo-header.png') }}" alt="Logo"></a>
+            <div class="navbar-links">
+                <ul class="navbar-nav flex-row mr-auto fw-bold">
+                    <li class="nav-item ms-3 me-2">
+                        <a class="nav-link" href="{{ path('app_home') }}">Good deals</a>
+                    </li>
+                    <li class="nav-item ms-2 me-3">
+                        <a class="nav-link" href="{{ path('app_home') }}">Coupon codes</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <div class="navbar-utilities d-flex flex-row">
-        <form class="d-flex" role="search">
-            <input class="form-control me-2 shape-circle" type="search" placeholder="Search..." aria-label="Search">
-        </form>
-        {% if app.user %}
-            <li class="nav-item">
-                <a href="{{ path('app_logout') }}" class="btn btn-danger shape-circle">Logout</a>
-            </li>
-        {% else %}
-            <li class="nav-item">
-                <a href="{{ path('app_login') }}" class="btn btn-primary shape-circle">Login</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="btn btn-primary shape-circle">Post...</a>
-            </li>
-        {% endif %}
+        <div class="navbar-utilities d-flex flex-row align-items-center">
+            <form class="d-flex align-items-center" role="search">
+                <input class="form-control me-2 shape-circle" type="search" placeholder="Search..." aria-label="Search">
+                <i class="icon search-icon fas fa-search"></i>
+            </form>
+            {% if app.user %}
+                <li class="nav-item ms-2">
+                    <a href="{{ path('app_logout') }}" class="btn btn-logout shape-circle">
+                        <i class="icon fas fa-right-from-bracket"></i>
+                        Logout
+                    </a>
+                </li>
+            {% else %}
+                <li class="nav-item ms-2 me-2">
+                    <a href="{{ path('app_login') }}" class="btn btn-login shape-circle">
+                        <i class="icon far fa-user"></i>
+                        Login
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="btn btn-post shape-circle">
+                        <i class="icon fas fa-plus"></i>
+                        Post...
+                    </a>
+                </li>
+            {% endif %}
+        </div>
     </div>
 </nav>
