--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,15 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <ul class="nav nav-underline mx-auto p-2 border-bottom">
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">À la une</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{{ path('app_hot') }}">Hot</a>
-        </li>
-    </ul>
-    <div class="row g-0 mx-auto p-2">
+    <div class="row g-0 mx-auto p-2 wrapper-center">
         <div class="col-9">
             <h1>Deals list</h1>
             <ul>
