--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -42,3 +42,13 @@
         </div>
     </div>
 </nav>
+<nav class="submenu">
+    <ul class="nav mx-auto p-2 wrapper-center">
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">À la une</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path('app_hot') }}">Hot</a>
+        </li>
+    </ul>
+</nav>
