Add Relations Deal Comments + Ajax notation

--- a/assets/styles/base/_typography.scss
+++ b/assets/styles/base/_typography.scss
@@ -3,4 +3,9 @@
     src: url('../../fonts/GentySans-Regular.woff2') format('woff2'),
          url('../../fonts/GentySans-Regular.woff') format('woff'),
          url('../../fonts/GentySans-Regular.ttf') format('truetype');
-  }  
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../../fonts/Poppins-Regular.ttf') format('truetype');
+}
