--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,7 @@
         <div class="col-9">
             <h1>Deals list</h1>
             <ul>
-                {% for deal in deals %}
+                {% for deal in featuredDeals %}
                     <div class="card mb-3 me-3">
                         <div class="row g-0">
                             <div class="col-md-4">
@@ -13,6 +13,14 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
+                                    <div class="card-body">
+                                    <div class="container">
+                                        <div class="btn-group" data-url="{{ path('ajax_deal_update', {'id': deal.id}) }}" data-id="{{ deal.id }}">
+                                            <button type="button" class="btn btn-primary shape-circle rate-deal" data-type="decrease">-</button>
+                                            <p><span>{{ deal.notation }}</span>°C</p>
+                                            <button type="button" class="btn btn-primary shape-circle rate-deal" data-type="increase">+</button>
+                                        </div>
+                                    </div>
                                     <h2>{{ deal.Title }}</h2>
                                     <p>{{ deal.Description }}</p>
                                     <p>Prix : {{ deal.Price }}</p>
