--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -3,6 +3,7 @@
 @import "base/reset";
 @import "base/typography";
 @import "components/buttons";
+@import "components/rating";
 @import "layouts/footer";
 @import "layouts/forms";
 @import "layouts/header";
