--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,10 +15,10 @@
                                 <div class="card-body">
                                     <div class="card-body">
                                     <div class="container">
-                                        <div class="btn-group" data-url="{{ path('ajax_deal_update', {'id': deal.id}) }}">
-                                            <a class="btn btn-primary shape-circle rate-deal" data-type="decrease"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %}>-</a>
+                                        <div class="btn-group rate-deal-container shape-circle" data-url="{{ path('ajax_deal_update', {'id': deal.id}) }}">
+                                            <a class="btn shape-circle rate-deal decrease" data-type="decrease"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %} title="Negative vote">-</a>
                                             <p><span class="notation-value-{{ deal.id }}">{{ deal.notation }}</span>°C</p>
-                                            <a class="btn btn-primary shape-circle rate-deal" data-type="increase"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %}>+</a>
+                                            <a class="btn shape-circle rate-deal increase" data-type="increase"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %} title="Positive vote">+</a>
                                         </div>
                                     </div>
                                     <h2>{{ deal.Title }}</h2>
@@ -35,7 +35,7 @@
         <div class="card col-3">
             <h1>Most thundered</h1>
             <ul>
-                {% for deal in deals %}
+                {% for deal in hotestDeals %}
                     <li>
                         <h2>{{ deal.Title }}</h2>
                         <p>{{ deal.Description }}</p>
