--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,9 +16,9 @@
                                     <div class="card-body">
                                     <div class="container">
                                         <div class="btn-group rate-deal-container shape-circle" data-url="{{ path('ajax_deal_update', {'id': deal.id}) }}">
-                                            <a class="btn shape-circle rate-deal decrease" data-type="decrease"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %} title="Negative vote">-</a>
-                                            <p><span class="notation-value-{{ deal.id }}">{{ deal.notation }}</span>°C</p>
-                                            <a class="btn shape-circle rate-deal increase" data-type="increase"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %} title="Positive vote">+</a>
+                                            <a class="btn shape-circle rate-deal decrease" data-type="decrease"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %} title="Negative vote"><i class="fas fa-minus"></i></a>
+                                            <p><span class="notation-value-{{ deal.id }}">{{ deal.notation }}</span>°</p>
+                                            <a class="btn shape-circle rate-deal increase" data-type="increase"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %} title="Positive vote"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                     <h2>{{ deal.Title }}</h2>
