--- a/templates/hot/hot.html.twig
+++ b/templates/hot/hot.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="row g-0 mx-auto p-2 wrapper-center">
         <div class="col-9">
-            <h1>Deals list</h1>
+            <h1>Hot Deals</h1>
             <ul>
                 {% for deal in hotDeals %}
                     <div class="card mb-3 me-3">
@@ -15,15 +15,15 @@
                                 <div class="card-body">
                                     <div class="card-body">
                                     <div class="container">
-                                        <div class="btn-group" data-url="{{ path('ajax_deal_update', {'id': deal.id}) }}">
-                                            <a class="btn btn-primary shape-circle rate-deal" data-type="decrease"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %}>-</a>
-                                            <p><span class="notation-value-{{ deal.id }}">{{ deal.notation }}</span>°C</p>
-                                            <a class="btn btn-primary shape-circle rate-deal" data-type="increase"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %}>+</a>
+                                        <div class="btn-group rate-deal-container shape-circle" data-url="{{ path('ajax_deal_update', {'id': deal.id}) }}">
+                                            <a class="btn shape-circle rate-deal decrease" data-type="decrease"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %} title="Negative vote"><i class="fas fa-minus"></i></a>
+                                            <p class="px-1"><span class="notation-value-{{ deal.id }}">{{ deal.notation }}</span>°</p>
+                                            <a class="btn shape-circle rate-deal increase" data-type="increase"{% if app.user is null %} href="{{ path('app_login') }}"{% endif %} title="Positive vote"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                     <h2>{{ deal.Title }}</h2>
                                     <p>{{ deal.Description }}</p>
-                                    <p>Prix : {{ deal.Price }}</p>
+                                    <p>{{ deal.Price }}€</p>
                                     <p>Date d'expiration : {{ deal.ExpirationDate|date('d/m/Y') }}</p>
                                 </div>
                             </div>
