Rating ok + Coupon page + Detail page + Fix fixtures

--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -5,10 +5,10 @@
             <div class="navbar-links">
                 <ul class="navbar-nav flex-row mr-auto fw-bold">
                     <li class="nav-item ms-3 me-2">
-                        <a class="nav-link" href="{{ path('app_home') }}">Good deals</a>
+                        <a class="nav-link" href="{{ path('app_hot') }}">Good deals</a>
                     </li>
                     <li class="nav-item ms-2 me-3">
-                        <a class="nav-link" href="{{ path('app_home') }}">Coupon codes</a>
+                        <a class="nav-link" href="{{ path('app_coupon') }}">Coupon codes</a>
                     </li>
                 </ul>
             </div>
