--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -33,7 +33,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="btn btn-post shape-circle">
+                    <a href="{{ path('app_post') }}" class="btn btn-post shape-circle">
                         <i class="icon fas fa-plus"></i>
                         Post...
                     </a>
