Add slick slider + preview on post deal

--- a/assets/styles/components/_rating.scss
+++ b/assets/styles/components/_rating.scss
@@ -7,6 +7,7 @@
         font-family: 'Poppins';
         font-weight: 700;
         color : #e00034;
+        cursor: default;
     }
     
     .rate-deal {
