--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -34,9 +34,9 @@
                 {% endfor %}
             </ul>
         </div>
+        {# TODO finir slider #}
         <div class="card col-3">
-            <h1>Most thundered</h1>
-            <ul>
+            <ul class="slick-slider">
                 {% for deal in hotestDeals %}
                     <li>
                         <h2>{{ deal.Title }}</h2>
