--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -9,3 +9,11 @@
 @import "layouts/header";
 @import "pages/home";
 @import "pages/login";
+
+.deal{
+    font-size: 12px;
+    h2 {
+        font-size: 14px;
+        font-weight: bold;
+    }
+}
