--- a/templates/post/post.html.twig
+++ b/templates/post/post.html.twig
@@ -24,9 +24,9 @@
                         {{ form_errors(form.description) }}
                     </div>
                     <div class="form-group">
-                        {{ form_label(form.expirationdate, 'Expiration Date') }}
-                        {{ form_widget(form.expirationdate, {'attr': {'class': 'post-el'}}) }}
-                        {{ form_errors(form.expirationdate) }}
+                        {{ form_label(form.expirationDate, 'Expiration Date') }}
+                        {{ form_widget(form.expirationDate, {'attr': {'class': 'post-el'}}) }}
+                        {{ form_errors(form.expirationDate) }}
                     </div>
                     <div class="form-group">
                         {{ form_label(form.category, 'Category') }}
@@ -55,7 +55,7 @@
                         <h2 id="post_form_title_preview">What is Lorem Ipsum?</h2>
                         <p id="post_form_description_preview">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                         <p id="post_form_price_preview">XXX €</p>
-                        <p id="post_form_expirationdate_preview">01/01/2000 00:00</p>
+                        <p id="post_form_expirationDate_preview">01/01/2000 00:00</p>
                         <div class="d-flex justify-content-end">
                             <a class="btn btn-primary shape-circle show-deal">Voir le deal <i class="fas fa-external-link-alt"></i></a>
                         </div>
