--- a/templates/post/post.html.twig
+++ b/templates/post/post.html.twig
@@ -5,59 +5,59 @@
 {% block body %}
     <div class="row g-0 mx-auto p-2 wrapper-center">
         <h1>Create a Deal</h1>
-        <div class="row mb-3">
-            <div class="col-md-6 offset-md-3">
-                {{ form_start(form, {'attr': {'class': 'post-deal', 'novalidate': 'novalidate'}}) }}
-                    <div class="form-group">
-                        {{ form_label(form.title, 'Title') }}
-                        {{ form_widget(form.title, {'attr': {'class': 'post-el', 'placeholder': 'Title'}}) }}
-                        {{ form_errors(form.title) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_label(form.price, 'Price') }}
-                        {{ form_widget(form.price, {'attr': {'class': 'post-el', 'placeholder': 'Price'}}) }}
-                        {{ form_errors(form.price) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_label(form.description, 'Description') }}
-                        {{ form_widget(form.description, {'attr': {'class': 'post-el', 'placeholder': 'Description'}}) }}
-                        {{ form_errors(form.description) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_label(form.expirationDate, 'Expiration Date') }}
-                        {{ form_widget(form.expirationDate, {'attr': {'class': 'post-el'}}) }}
-                        {{ form_errors(form.expirationDate) }}
-                    </div>
-                    <div class="form-group">
-                        {{ form_label(form.category, 'Category') }}
-                        {{ form_widget(form.category, {'attr': {'class': 'post-el'}}) }}
-                        {{ form_errors(form.category) }}
-                    </div>
-                    <button type="submit" class="btn btn-primary">Create</button>
-                {{ form_end(form) }}
-            </div>
-        </div>
-        <h2>Overview</h2>
-        <div class="card mb-3 me-3">
-            <div class="row g-0">
-                <div class="col-md-4 d-flex justify-content-center align-items-center">
-                    <img src="https://picsum.photos/200" class="img-fluid rounded" alt="...">
+        <div class="row mb-3 col-4 bg-white p-2">
+            {{ form_start(form, {'attr': {'class': 'post-deal', 'novalidate': 'novalidate'}}) }}
+                <div class="form-group">
+                    {{ form_label(form.title, 'Title') }}
+                    {{ form_widget(form.title, {'attr': {'class': 'post-el', 'placeholder': 'Title'}}) }}
+                    {{ form_errors(form.title) }}
                 </div>
-                <div class="col-md-8">
-                    <div class="card-body">
+                <div class="form-group">
+                    {{ form_label(form.price, 'Price') }}
+                    {{ form_widget(form.price, {'attr': {'class': 'post-el', 'placeholder': 'Price'}}) }}
+                    {{ form_errors(form.price) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(form.description, 'Description') }}
+                    {{ form_widget(form.description, {'attr': {'class': 'post-el', 'placeholder': 'Description'}}) }}
+                    {{ form_errors(form.description) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(form.expirationDate, 'Expiration Date') }}
+                    {{ form_widget(form.expirationDate, {'attr': {'class': 'post-el'}}) }}
+                    {{ form_errors(form.expirationDate) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(form.category, 'Category') }}
+                    {{ form_widget(form.category, {'attr': {'class': 'post-el'}}) }}
+                    {{ form_errors(form.category) }}
+                </div>
+                <button type="submit" class="btn btn-primary">Create</button>
+            {{ form_end(form) }}
+        </div>
+        <div class="col-8 d-flex flex-column justify-content-center ms-4">
+            <h2>Overview</h2>
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4 d-flex justify-content-center align-items-center">
+                        <img src="https://picsum.photos/200" class="img-fluid rounded" alt="...">
+                    </div>
+                    <div class="col-md-8">
                         <div class="card-body">
-                            <div class="btn-group rate-deal-container shape-circle">
-                                <a class="btn shape-circle rate-deal decrease" title="Negative vote"><i class="fas fa-minus"></i></a>
-                                <p class="px-1">0°</p>
-                                <a class="btn shape-circle rate-deal increase" title="Positive vote"><i class="fas fa-plus"></i></a>
+                            <div class="card-body">
+                                <div class="btn-group rate-deal-container shape-circle">
+                                    <a class="btn shape-circle rate-deal decrease" title="Negative vote"><i class="fas fa-minus"></i></a>
+                                    <p class="px-1">0°</p>
+                                    <a class="btn shape-circle rate-deal increase" title="Positive vote"><i class="fas fa-plus"></i></a>
+                                </div>
                             </div>
-                        </div>
-                        <h2 id="post_form_title_preview">What is Lorem Ipsum?</h2>
-                        <p id="post_form_description_preview">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                        <p id="post_form_price_preview">XXX €</p>
-                        <p id="post_form_expirationDate_preview">01/01/2000 00:00</p>
-                        <div class="d-flex justify-content-end">
-                            <a class="btn btn-primary shape-circle show-deal">Voir le deal <i class="fas fa-external-link-alt"></i></a>
+                            <h2 id="post_form_title_preview">What is Lorem Ipsum?</h2>
+                            <p id="post_form_description_preview">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                            <p id="post_form_price_preview">XXX €</p>
+                            <p id="post_form_expirationDate_preview">01/01/2000 00:00</p>
+                            <div class="d-flex justify-content-end">
+                                <a class="btn btn-primary shape-circle show-deal">Voir le deal <i class="fas fa-external-link-alt"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
