Add report in deal + dealgroup

--- a/templates/deal/deal.html.twig
+++ b/templates/deal/deal.html.twig
@@ -59,6 +59,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <p>{{ comment.content }}</p>
+                                <p>{{ comment.userPseudo }}</p>
                                 <p>{{ comment.createdAt|date('d/m/Y') }}</p>
                             </div>
                         </div>
